--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,6 @@
 /*Body*/
 body{
     font-family: Arial, sans-serif;
-    overscroll-behavior: none;
     margin: 0;
     scroll-behavior: smooth;
 }
@@ -27,6 +26,7 @@ img {
     transition: 0.2s;
     width: 100%;
     height: 100%;
+    max-height: 75vh;
     object-fit: contain;
 }
 a {
@@ -109,11 +109,11 @@ li.nav {
 /* Responsive nav hamburger */
 .columnnav {
     float: left;
-    width: 70%;
+    width: 75%;
 }
 .columnclose {
     float: right;
-    width: 30%;
+    width: 25%;
 }
 .nav {
     overflow: hidden;
@@ -123,7 +123,7 @@ li.nav {
     display: none;
 }
 /* Responsive Nav */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1230px) {
     .nav a:not(:first-child) {
         display: none;
     }
@@ -294,8 +294,9 @@ article img {
 }
 aside {
     width: 29%;
-    position: fixed;
-    left: 0;
+    position: -webkit-sticky; /* Safari 12 and older*/
+    position:sticky;
+    float: left;
     background-color: #000000;
     color: #ffffff;
     overflow-y: auto;
@@ -403,6 +404,7 @@ aside h2 {
     margin: auto;
     margin-bottom: 5px;
     transition: 0.2s;
+    border-radius: 20px;
 }
 .contact-form input:invalid,
 .contact-form textarea:invalid {
