--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,9 @@ html {
 @view-transition {
   navigation: auto;
 }
+::view-transition-group(*) {
+    animation-duration: 0.15s;
+  }
 /* Style */ 
 p, li {
     max-width: 85ch;
@@ -28,6 +31,89 @@ img {
     height: 100%;
     max-height: 75vh;
     object-fit: contain;
+}
+img:not(.enlarged-image):hover {
+    box-shadow: 0 8px 20px 0 #007BFF;
+    cursor: pointer; /* Change cursor to pointer */
+}
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(36, 27, 27, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 0; /* Start with opacity 0 for fade-in effect */
+    animation: fadeIn 0.5s ease forwards;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        transform: scale(0.1);
+    }
+}
+
+.modal .enlarged-image {
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.modal .close-button {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    background-color: #ffffffbc;
+    color: #000000;
+    border: none;
+    cursor: pointer;
+    font-size: 2rem;
+    border-radius: 100%;
+    width: 4rem;
+    height: 4rem;
+}
+
+.modal .close-button:hover {
+    background-color: #000000;
+    color: #007BFF;
+    border: solid #007BFF;
+    text-decoration: underline;
+    box-shadow: 0 8px 20px 0 #007BFF;
+}
+
+.hidden-image {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.visible-image {
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+.fade-out {
+    animation: fadeOut 0.5s ease forwards;
 }
 a {
     transition: 0.2s;
@@ -89,14 +175,18 @@ nav {
     position: sticky;
     top: 0;
     z-index: 1;
-    padding: 0 8px;
+    padding: 0 8px 4px 8px;
 }
 .nav a {
     padding: 8px 16px;
     text-decoration: none;
-    margin: 0 8px 8px 8px;
+    margin: 0 0 0 8px;
     align-items: center;
     display:inline-block;
+    color: #ffffff;
+    background: linear-gradient(#333333, #111111);
+    border: solid #222222;
+    border-radius: 15px;
 }
 .nav a.active {
     background: #000000;
@@ -105,6 +195,7 @@ nav {
 }
 li.nav {
     display: inline;
+    padding: 0;
 }
 /* Responsive nav hamburger */
 .columnnav {
@@ -123,34 +214,30 @@ li.nav {
     display: none;
 }
 /* Responsive Nav */
-@media screen and (max-width: 1230px) {
+@media screen and (max-width: 1080px) {
     .nav a:not(:first-child) {
         display: none;
     }
-    .nav a.icon {
-        float: right;
-        display: block;
+    .nav a {
         padding: 16px;
-    }
-    .nav.responsive .icon {
-        float: right;
-        display: block;
+        margin: 0;
     }
     .nav.responsive a {
         float: none;
         display: block;
         text-align: left;
+        border-radius: 0;
     }
-    .headertext {
-        font-size: 150%;
-        text-shadow: 1px 0 6px rgb(0, 0, 0);
+    .nav a.icon {
+        display: block;
+        padding: 16px 0;
+        margin: 0 0 0 8px;
+        text-align: center;
     }
 }
-/* Tablets big buttons */
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1200px) {
     .nav a {
         padding: 16px;
-        margin: 0px 8px;
     }
 }
 /* Welcome page, display 3 articles and a page welcome*/ 
@@ -182,10 +269,6 @@ li.nav {
         min-width: 0px;
     }
 }
-/* Hover animation for cards */
-.articlecolumn:hover, .featuredarticle:hover{
-    box-shadow: 0 4px 15px 0 #007BFF;
-}
 /*Button hover animation */
 .articlecolumn a:hover, .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover{
     color: #007BFF;
@@ -194,7 +277,7 @@ li.nav {
     box-shadow: 0 4px 10px 0 #007BFF;
 }
 /* Button appearance */
-aside a, footer a, .sitemap a, .nav a, .articlecolumn a, .linkbutton {
+aside a, footer a, .sitemap a, .articlecolumn a, .linkbutton {
     color: #ffffff;
     background: linear-gradient(#333333, #111111);
     border: solid #222222;
