--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,13 +42,16 @@ img:not(.enlarged-image):hover {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(36, 27, 27, 0.8);
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(8px);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9999;
     opacity: 0; /* Start with opacity 0 for fade-in effect */
     animation: fadeIn 0.5s ease forwards;
+    
 }
 
 @keyframes fadeIn {
@@ -84,18 +87,18 @@ img:not(.enlarged-image):hover {
     position: absolute;
     top: 1rem;
     left: 1rem;
-    background-color: #ffffff;
-    color: #000000;
-    border: none;
+    color: #ffffff;
+    background: linear-gradient(#333333, #111111);
+    border: solid #222222;
     cursor: pointer;
     font-size: 2rem;
     border-radius: 100%;
     width: 4rem;
     height: 4rem;
+    transition: 0.2s;
 }
 
 .modal .close-button:hover {
-    background-color: #000000;
     color: #007BFF;
     border: solid #007BFF;
     text-decoration: underline;
