--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,7 +44,7 @@ img:not(.enlarged-image):hover {
     height: 100vh;
     background: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(4px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,16 +85,17 @@ img:not(.enlarged-image):hover {
 
 .modal .close-button {
     position: absolute;
-    top: 1rem;
-    left: 1rem;
+    top: 0;
+    left: 0;
+    margin: 5px;
     color: #ffffff;
     background: linear-gradient(#333333, #111111);
     border: solid #222222;
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 2em;
     border-radius: 100%;
-    width: 4rem;
-    height: 4rem;
+    width: 2em;
+    height: 2em;
     transition: 0.2s;
 }
 
