--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,6 +97,7 @@ img:not(.enlarged-image):hover {
     width: 2em;
     height: 2em;
     transition: 0.2s;
+    text-align: center;
 }
 
 .modal .close-button:hover {
