--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,6 @@
 body{
     font-family: Arial, sans-serif;
     margin: 0;
-    scroll-behavior: smooth;
 }
 html {
     scroll-behavior: smooth;
@@ -26,15 +25,13 @@ p, li, h1, h2, h3, article img {
 }
 img {
     border-radius: 15px;
-    transition: 0.2s;
     width: 100%;
     height: 100%;
     max-height: 75vh;
     object-fit: contain;
 }
-img:not(.enlarged-image):hover {
-    box-shadow: 0 8px 20px 0 #007BFF;
-    cursor: pointer; /* Change cursor to pointer */
+a, .contact-form input[type="submit"], img {
+    transition: 0.2s;
 }
 .modal {
     position: fixed;
@@ -42,56 +39,22 @@ img:not(.enlarged-image):hover {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.9);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
-    opacity: 0; /* Start with opacity 0 for fade-in effect */
-    animation: fadeIn 0.5s ease forwards;
-    border-radius: 0;
+    z-index: 2;
+    opacity: 0;
+    animation: fadeIn 0.3s ease forwards;
 }
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-        transform: scale(0.5);
-    }
-    100% {
-        opacity: 1;
-        transform: scale(1);
-    }
-}
-
-@keyframes fadeOut {
-    0% {
-        opacity: 1;
-        transform: scale(1);
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        transform: scale(0.1);
-    }
-}
-
 .modal .enlarged-image {
     max-width: 90%;
     max-height: 90%;
 }
-
 .modal .close-button {
     position: absolute;
     top: 0;
     left: 0;
     margin: 5px;
-    color: #ffffff;
-    background: linear-gradient(#333333, #111111);
-    border: solid #222222;
-    cursor: pointer;
     font-size: 200%;
     border-radius: 100%;
     transition: 0.2s;
@@ -99,44 +62,73 @@ img:not(.enlarged-image):hover {
     width:fit-content;
     text-align: center;
 }
-
-.modal .close-button:hover {
-    color: #007BFF;
-    border: solid #007BFF;
-    text-decoration: underline;
-    box-shadow: 0 8px 20px 0 #007BFF;
-}
-
 .hidden-image {
     opacity: 0;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.3s ease;
 }
-
 .visible-image {
     opacity: 1;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.3s ease;
 }
-
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    75% {
+        transform: scale(0.3);
+    }
+    100% {
+        transform: scale(0.1);
+        opacity: 0;
+    }
+}
 .fade-out {
-    animation: fadeOut 0.5s ease forwards;
+    animation: fadeOut 0.3s ease;
 }
-a {
-    transition: 0.2s;
+/* Blur */
+.modal, nav {
+    background: rgba(231, 231, 231, 0.622);
+    backdrop-filter: blur(22px);
+    -webkit-backdrop-filter: blur(22px);
+}
+/* Dark Gradient */
+.modal .close-button, .nav a, .contact-form input[type="submit"], .welcometext, .pagewelcome, .featuredarticle, .articlecolumn {
+    background: linear-gradient(#333333, #111111);
+}
+/* Light Gradient */
+.sitemap, footer a, .articlecolumn a, .articles, .contact-form {
+    background: linear-gradient(#f7f7f7, #dbdbdb);
+    color: #000000;
+}
+/* Hover large dropshadow */
+.modal .close-button:hover, img:not(.enlarged-image):hover {
+    box-shadow: 0 8px 20px 0 #007BFF;
+    cursor: pointer;
 }
 /* Rounded corners */
-div {
+div, aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form input[type="submit"] {
     border-radius: 20px;
 }
+/*Not Rounded*/
+.articles, .nav, .modal {
+    border-radius: 0;
+}
 .welcometext, .pagewelcome{
-    background-image: linear-gradient(#222222, #000000);
     margin: auto;
     color: #ffffff;
     border: #222222;
     border-style: solid;
-}
-/*Not Rounded*/
-.articles, .nav {
-    border-radius: 0;
 }
 /* Header */
 .logo {
@@ -175,14 +167,12 @@ header {
 }
 /* Navigation Bar */
 nav {
-    background: rgba(231, 231, 231, 0.622);
-    backdrop-filter: blur(22px);
-    -webkit-backdrop-filter: blur(22px);
-    position: -webkit-sticky; /* Safari 12 and older*/
+    position: -webkit-sticky; /* Safari <12*/
     position: sticky;
     top: 0;
     z-index: 1;
     padding: 4px 8px 4px 8px;
+    overflow: auto;
 }
 .nav a {
     padding: 8px 16px;
@@ -190,9 +180,6 @@ nav {
     margin: 0 0 0 8px;
     align-items: center;
     display:inline-block;
-    color: #ffffff;
-    background: linear-gradient(#333333, #111111);
-    border: solid #222222;
     border-radius: 15px;
 }
 .nav a.active {
@@ -204,7 +191,6 @@ li.nav {
     display: inline;
     padding: 0;
 }
-/* Responsive nav hamburger */
 .columnnav {
     float: left;
     width: 75%;
@@ -214,7 +200,6 @@ li.nav {
     width: 25%;
 }
 .nav {
-    overflow: hidden;
     top: 0;
 }
 .nav .icon {
@@ -241,6 +226,15 @@ li.nav {
         margin: 0 0 0 8px;
         text-align: center;
     }
+    nav.responsive {
+        height: 100vh;
+        overflow-y: auto;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 3;
+    }
 }
 @media screen and (max-width: 1200px) {
     .nav a {
@@ -254,11 +248,10 @@ li.nav {
     margin: auto;
     text-align: center;
 }
-.welcometext p {
+.welcometext p, .welcometext h1 {
     margin: 2%;
 }
 .welcometext h1 {
-    margin: 2%;
     font-size: 200%;
 }
 .featuredarticle {
@@ -269,37 +262,30 @@ li.nav {
     padding: 5px;
     margin: 5px;
 }
-/* Responsive layout - Makes featured articles fill screen, removes horizontal navigation bar. */
-@media screen and (max-width: 900px) {
-    .featuredarticle  {
-        width: 98%;
-        min-width: 0px;
-    }
-}
-/*Button hover animation */
-.articlecolumn a:hover, .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover{
+/*Button hover animation*/
+.articlecolumn a:hover, .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .modal .close-button:hover{
     color: #007BFF;
     border: solid #007BFF;
     text-decoration: underline;
     box-shadow: 0 4px 10px 0 #007BFF;
 }
-/* Button appearance */
-aside a, footer a, .sitemap a, .articlecolumn a, .linkbutton {
+/*Dark buttons*/
+aside a, .sitemap a, .linkbutton, .contact-form input[type="submit"], .nav a, .modal .close-button {
     color: #ffffff;
-    background: linear-gradient(#333333, #111111);
     border: solid #222222;
-    border-radius: 20px;
+    background: linear-gradient(#333333, #111111);
 }
-/* Card appearance */
+/*Light buttons*/
+footer a, .articlecolumn a{
+    border: solid #f0f0f0;
+}
+/*Card appearance*/
 .featuredarticle, .articlecolumn{
-    text-align: center;
-    background:  linear-gradient(#222222, #000000);
     color: #ffffff;
     border: solid #007BFF;
     box-sizing: border-box; 
-    transition: 0.3s;
 }
-/* Article showcase pages */
+/*Article showcase pages*/
 .pagewelcome {
     max-width: 75ch;
     padding: 2%;
@@ -309,11 +295,11 @@ aside a, footer a, .sitemap a, .articlecolumn a, .linkbutton {
     font-size: 200%;
 }
 .articles {
-    background-color: #f5f5f5;
     margin: auto;
     overflow: hidden;
     padding: 1%;
     box-sizing: border-box;
+    text-align: center;
 }
 .articlerow {
     display: flex;
@@ -322,7 +308,6 @@ aside a, footer a, .sitemap a, .articlecolumn a, .linkbutton {
     justify-content: center;
 }
 .articles h2 {
-    text-align: center;
     text-decoration: underline;
 }
 .articlecolumn {
@@ -344,24 +329,22 @@ aside a, footer a, .sitemap a, .articlecolumn a, .linkbutton {
     display:inline-block;
 }
 .articlecolumn p {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 0 5px;
 }
-/* Clearfix for .articles */
+/*Clearfix for .articles*/
 .articles::after {
     content: "";
     display: table;
     clear: both;
 }
-/* Fallback styles for Safari 9 or older */
+/*Fallback styles Safari <9*/
 .safari9 .articlecolumn, .safari9 .featuredarticle {
     width: 40%;
 }
-/* Article */
+/*Article*/
 article {
     width: 68%;
-    margin-left: 31%;
-    margin-right: 1%;
+    margin: 0 1% 0 31%;
 }
 article h1 {
     text-align: center;
@@ -376,8 +359,7 @@ article img {
     text-align: center;
 }
 .linkbutton {
-    margin-left: 15%;
-    margin-right: 15%;
+    margin: 0 15%;
     display: block;
     padding: 8px 16px;
     text-align: center;
@@ -387,30 +369,28 @@ aside {
     position: -webkit-sticky; /* Safari 12 and older*/
     position:sticky;
     float: left;
-    background-color: #000000;
-    color: #ffffff;
+    background: linear-gradient(#fafafa, #dbdbdb);
+    color: #000000;
     overflow-y: auto;
     box-sizing: border-box;
 }
 aside a {
     width: 90%;
-    padding: 6px;
-    margin-left: 1%;
-    margin-top: 4px;
-    margin-bottom: 4px;
+    padding: 6px 3px 6px 9px;
+    margin: 4px 0 4px 1%;
     display:inline-block;
 }
 aside h2 {
     margin: 3%;
 }
-/* Responsive layout - makes the columns stack on top of each other */
+/*Responsive layout - makes the columns stack on top of each other*/
 @media screen and (max-width: 900px) {
     .articlecolumn {
         width: 100%;
         margin: 2%;
         min-width: 100%;
     }
-    /* Makes aside hide on articles */
+    /*Makes aside hide on articles*/
     aside {
         display: none;
     }
@@ -420,8 +400,13 @@ aside h2 {
     .articlecolumn img {
         max-width: 45%;
     }
+    /* Index page cards fill screen */
+    .featuredarticle  {
+        width: 98%;
+        min-width: 0;
+    }
 }
-/* Responsive- hide jump to section on short displays */
+/*Aside hidden on small screens */
 @media screen and (max-height: 260px) {
     aside {
         display: none;
@@ -430,17 +415,14 @@ aside h2 {
         margin: auto;
     }
 }
-/* Contact */
+/*Contact*/
 .contact {
-    margin-top: 1%;
     width: 80%;
     max-width: 2000px;
     background-color: #222222;
     color: #ffffff;
-    margin: auto;
-    margin-bottom: 1%;
+    margin: 1% auto;
     padding-bottom: 5px;
-    transition: 0.2s;
 }
 .contact p {
     margin: 2%;
@@ -457,9 +439,6 @@ aside h2 {
     margin: 1%;
     padding: 20px;
     padding-bottom: 10px;
-    background-color: #000000;
-    background-image: linear-gradient(#222222, #000000);
-    color: #ffffff;
 }
 .contact-form label {
     font-weight: bold;
@@ -484,17 +463,11 @@ aside h2 {
     min-width: fit-content;
     width: 50%;
     padding: 15px;
-    color: #ffffff;
     text-decoration: underline;
-    cursor: pointer;
     font-size: 110%;
     display: block;
-    background: linear-gradient(#333333, #111111);
-    border: solid #222222;
-    margin: auto;
-    margin-bottom: 5px;
-    transition: 0.2s;
-    border-radius: 20px;
+    margin:auto auto 5px auto;
+    cursor: pointer;
 }
 .contact-form input:invalid,
 .contact-form textarea:invalid {
@@ -546,8 +519,6 @@ th {
 }
 /* Sitemap */
 .sitemap {
-    background-color: #f5f5f5;
-    color: #000000;
     padding: 2%;
 }
 .sitemap a {
@@ -565,26 +536,25 @@ th {
 }
 /* Responsive design Mobile */
 @media screen and (max-width: 600px) {
-    /* Makes Logo disappear on mobile devices */
+    /*Logo hidden on mobile devices */
     .logo {
         display: none;
     }
-    /* Ensures there is minimal overflow on extremely small devices */
+    /* Less overflow on small screens*/
     body {
         word-wrap: break-word;
     }
-    /* Makes header text fill screen, stops overflow into nav bar on very small screens.*/
+    /* Makes header text fill screen, stops overflow into nav bar on small screens.*/
     .headertext {
         width: 100%;
-        font-size: 83%;
-        text-shadow: 0 0 2px rgb(0, 0, 0);
+        font-size: 100%;
+        text-shadow: none;
         overflow: hidden;
     }
     /* Makes welcome text fill screen*/
     .welcometext, .pagewelcome{
         width: auto;
-        margin-left: 1%;
-        margin-right: 1%;
+        margin: 0 1%;
     }
     /* Makes contact and table fill screen*/
     .contact, table{
@@ -602,8 +572,7 @@ th {
     /* Improves article appearance */
     article {
         width: auto;
-        margin-left: 2%;
-        margin-right: 2%;
+        margin: 0 2%;
     }
     article h1 {
         font-size: 200%;
@@ -615,16 +584,40 @@ th {
         text-align: left;
     }
 }
-/* Dark Mode */
+.linkwhite {
+    color: #ffffff;
+    font-weight: bold;
+}
+.linkblack {
+    color: #000000;
+    font-weight: bold;
+}
+/*Dark Mode*/
 @media (prefers-color-scheme: dark) {
-    /*Background colour and Text colour */
-    body {
+    /*Background and Text colour */
+    body, th {
         background-color: #000000;
         color: #ffffff;
     }
-    /* Article section background colour*/
-    .articles {
-        background-color: #222222;
+    /*Light accent to dark*/
+    .articles, aside, .sitemap {
+        background:  linear-gradient(#0f0f0f, #272727);
+        color: #ffffff;
+    }
+    /*Buttons to grey*/
+    aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form input[type="submit"] {
+        color: #ffffff;
+        background: linear-gradient(#616161, #272727);
+        border: solid #6e6e6e;
+    }
+    /*Contact dark grey*/
+    .contact-form {
+        background: linear-gradient(#616161, #272727);
+        color: #ffffff;
+    }
+    /*Button hover animation*/
+    .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .articlecolumn a:hover{
+        background: linear-gradient(#333333, #111111);
     }
     th, td {
         border-bottom: 2px solid #ffffff;
@@ -632,18 +625,11 @@ th {
     table {
         border: 2px solid #ffffff;
     }
-    th {
-        background-color: #ffffff;
-        color: #000000;
+    nav, .modal {
+        background: rgba(17, 17, 17, 0.622);
     }
-    .sitemap {
-        background-color: #222222;
+    .linkblack {
         color: #ffffff;
-    }
-    nav {
-        background: rgba(13, 13, 13, 0.622);
-        backdrop-filter: blur(22px);
-        -webkit-backdrop-filter: blur(22px);
     }
 }
 pre {
@@ -653,10 +639,10 @@ pre {
     width: fit-content;
     margin: auto;
 }
-.linkwhite {
-    color: #ffffff;
-    font-weight: bold;
-}
 .l2 {
     padding-left: 5%;
+}
+hr {
+    height: 1px;
+    background-color: currentcolor;
 }
