--- a/stylesheet.css
+++ b/stylesheet.css
@@ -135,6 +135,11 @@ div, aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form
     float: left;
     height: 100%;
     width: 22%;
+    box-shadow: 0 4px 30px 0 #000000;
+}
+.logo img {
+    background:#000000;
+    border-radius: 0;
 }
 .headertext {
     float: left;
@@ -151,7 +156,7 @@ div, aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form
     text-shadow: 1px 0 10px #000000;
 }
 header {
-    background-color: #000000;
+    background: linear-gradient(#333333, #000000);
     height: 100px;
     width: 100%;
     margin-top: 0px;
@@ -205,7 +210,7 @@ li.nav {
     display: none;
 }
 /* Responsive Nav */
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1000px) {
     .nav a:not(:first-child) {
         display: none;
     }
@@ -477,7 +482,7 @@ aside h2 {
 }
 /* Footer */
 footer {
-    background-color:#000000;
+    background: linear-gradient(#333333, #000000);
     color: #007BFF;
     bottom: 0;
     left: 0;
