--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,7 +118,7 @@ a, .contact-form input[type="submit"], img {
 }
 /* Rounded corners */
 div, aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form input[type="submit"] {
-    border-radius: 20px;
+    border-radius: 10px;
 }
 /*Not Rounded*/
 .articles, .nav, .modal {
@@ -179,16 +179,16 @@ nav {
     overflow: auto;
 }
 .nav a {
-    padding: 8px 16px;
+    padding: 6px 8px;
     text-decoration: none;
     margin: 0 0 0 8px;
     align-items: center;
     display:inline-block;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .nav a.active {
     background: #000000;
-    color: #007BFF;
+    color: #ffffff;
     font-weight: bold;
 }
 li.nav {
@@ -268,16 +268,17 @@ li.nav {
 }
 /*Button hover animation*/
 .articlecolumn a:hover, .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .modal .close-button:hover{
-    color: #007BFF;
+    color: #ffffff;
+    background: linear-gradient(#5cbeff, #00a4f0, #006ed4);
     border: solid #007BFF;
     text-decoration: underline;
     box-shadow: 0 4px 10px 0 #007BFF;
 }
 /*Dark buttons*/
-aside a, .sitemap a, .linkbutton, .contact-form input[type="submit"], .nav a, .modal .close-button {
-    color: #ffffff;
-    border: solid #222222;
-    background: linear-gradient(#333333, #111111);
+ .sitemap a, .linkbutton, .contact-form input[type="submit"], .nav a, .modal .close-button {
+    color: #000000;
+    border: solid #00a4f0;
+    background: linear-gradient(#ffffff, #dadada, #d6d6d6);
 }
 /*Light buttons*/
 footer a, .articlecolumn a{
@@ -292,14 +293,13 @@ footer a, .articlecolumn a{
 /*Article showcase pages*/
 .pagewelcome {
     max-width: 75ch;
-    padding: 2%;
+    padding: 1%;
 }
 .pagewelcome h1 {
     margin-top: 0;
     font-size: 200%;
 }
 .articles {
-    margin: auto;
     overflow: hidden;
     padding: 1%;
     box-sizing: border-box;
@@ -313,6 +313,7 @@ footer a, .articlecolumn a{
 }
 .articles h2 {
     text-decoration: underline;
+    margin: 0 auto;
 }
 .articlecolumn {
     float: left;
@@ -320,16 +321,15 @@ footer a, .articlecolumn a{
     width: 22%;
     min-width: 45ch;
     margin: 1%;
-    padding-bottom: 1%;
+    padding-bottom: 8px;
 }
 .articlecolumn img {
     max-width: 75%;
     height: auto;
-    margin-bottom: 10px;
 }
 .articlecolumn a {
     width: 85%;
-    padding: 14px 16px;
+    padding: 6px 6px;
     display:inline-block;
 }
 .articlecolumn p {
@@ -380,9 +380,12 @@ aside {
 }
 aside a {
     width: 90%;
-    padding: 6px 3px 6px 9px;
-    margin: 4px 0 4px 1%;
+    padding: 5px 4px 5px 9px;
+    margin: 3px 0 3px 1%;
     display:inline-block;
+    background: linear-gradient(#333333, #000000);
+    color: #ffffff;
+    border: solid #222222;
 }
 aside h2 {
     margin: 3%;
@@ -499,6 +502,7 @@ footer a {
     margin: auto;
     width: 40%;
     padding: 14px 0;
+    border-radius: 0;
     display:inline-block;
 }
 .footertext, .footerbuttons {
