--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,13 @@
 /*Body*/
 body{
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin: 0 auto;
+    max-width: 2000px;
+    background-color: #ffffff;
 }
 html {
     scroll-behavior: smooth;
+    background-color: #000000;
   }
 @view-transition {
   navigation: auto;
@@ -56,7 +59,7 @@ a, .contact-form input[type="submit"], img {
     left: 0;
     margin: 5px;
     font-size: 200%;
-    border-radius: 100%;
+    border-radius: 10px;
     transition: 0.2s;
     padding: 1rem 2rem;
     width:fit-content;
@@ -322,6 +325,12 @@ footer a, .articlecolumn a{
     min-width: 45ch;
     margin: 1%;
     padding-bottom: 8px;
+    transition: all 0.3s ease-out;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #0000009b;
+    background-blend-mode: multiply;
 }
 .articlecolumn img {
     max-width: 75%;
