--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ img {
     max-height: 75vh;
     object-fit: contain;
 }
-a, .contact-form input[type="submit"], img {
+a, button, .contact-form input[type="submit"], img {
     transition: 0.2s;
 }
 .modal {
@@ -120,7 +120,7 @@ a, .contact-form input[type="submit"], img {
     cursor: pointer;
 }
 /* Rounded corners */
-div, aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form input[type="submit"] {
+div, aside a, .sitemap a, .linkbutton, footer a, button, .articlecolumn a, .contact-form input[type="submit"] {
     border-radius: 10px;
 }
 /*Not Rounded*/
@@ -189,6 +189,10 @@ nav {
     display:inline-block;
     border-radius: 10px;
 }
+.nav button {
+    width: 96%;
+    font-size: 100%;
+}
 li.nav {
     display: inline;
     padding: 0;
@@ -216,13 +220,13 @@ li.nav {
         padding: 16px;
         margin: 0;
     }
-    .nav.responsive a {
+    .nav.responsive a, .nav.responsive button {
         float: none;
         display: block;
         text-align: left;
         border-radius: 0;
     }
-    .nav a.icon {
+    .nav a.icon, .nav button.icon {
         display: block;
         padding: 16px 0;
         margin: 0 0 0 8px;
@@ -243,7 +247,7 @@ li.nav {
         padding: 16px;
     }
 }
-/* Welcome page, display 3 articles and a page welcome*/ 
+/*Welcome page, display 3 articles and a page welcome*/ 
 .welcometext {
     max-width: 85ch;
     padding: 1%;
@@ -265,13 +269,13 @@ li.nav {
     margin: 5px;
 }
 /*Dark buttons*/
- .sitemap a, .linkbutton, .contact-form input[type="submit"], .nav a, .modal .close-button{
+ .sitemap a, .linkbutton, .contact-form input[type="submit"], .nav a, button, .modal .close-button{
     color: #000000;
     border: solid #00a4f0;
     background: linear-gradient(#ffffff, #dadada, #d6d6d6);
 }
 /*Button hover animation*/
-.articlecolumn a:hover, .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .modal .close-button:hover{
+.articlecolumn a:hover, button:hover, .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .modal .close-button:hover{
     color: #ffffff;
     background: linear-gradient(#5cbeff, #00a4f0, #006ed4);
     border: solid #007BFF;
@@ -341,10 +345,6 @@ footer a, .articlecolumn a{
     content: "";
     display: table;
     clear: both;
-}
-/*Fallback styles Safari <9*/
-.safari9 .articlecolumn, .safari9 .featuredarticle {
-    width: 40%;
 }
 /*Article*/
 article {
@@ -625,7 +625,7 @@ th {
         color: #ffffff;
     }
     /*Button hover animation*/
-    .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .articlecolumn a:hover{
+    .linkbutton:hover, button:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .articlecolumn a:hover{
         background: linear-gradient(#333333, #111111);
     }
     th, td {
