--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,9 +9,7 @@ html {
     scroll-behavior: smooth;
     background-color: #000000;
   }
-@view-transition {
-  navigation: auto;
-}
+
 /* Style */ 
 p, li {
     max-width: 85ch;
@@ -30,9 +28,6 @@ img {
     max-height: 75vh;
     object-fit: contain;
 }
-a, button, .contact-form input[type="submit"], img {
-    transition: 0.2s;
-}
 .modal {
     position: fixed;
     top: 0;
@@ -44,7 +39,7 @@ a, button, .contact-form input[type="submit"], img {
     align-items: center;
     z-index: 2;
     opacity: 0;
-    animation: fadeIn 0.3s ease forwards;
+    animation: fadeIn 0.2s ease forwards;
 }
 .modal .enlarged-image {
     max-width: 90%;
@@ -57,23 +52,14 @@ a, button, .contact-form input[type="submit"], img {
     margin: 5px;
     font-size: 200%;
     border-radius: 10px;
-    transition: 0.2s;
     padding: 1rem 2rem;
     width:fit-content;
     text-align: center;
 }
-.hidden-image {
-    opacity: 0;
-    transition: opacity 0.3s ease;
-}
-.visible-image {
-    opacity: 1;
-    transition: opacity 0.3s ease;
-}
 @keyframes fadeIn {
     0% {
         opacity: 0;
-        transform: scale(0.9);
+        transform: scale(0.8);
     }
     100% {
         opacity: 1;
@@ -86,10 +72,10 @@ a, button, .contact-form input[type="submit"], img {
         transform: scale(1);
     }
     75% {
-        transform: scale(0.3);
+        transform: scale(0.7);
     }
     100% {
-        transform: scale(0.1);
+        transform: scale(0.4);
         opacity: 0;
     }
 }
@@ -98,9 +84,9 @@ a, button, .contact-form input[type="submit"], img {
 }
 /* Blur */
 .modal, nav {
-    background: rgba(231, 231, 231, 0.622);
-    backdrop-filter: blur(22px);
-    -webkit-backdrop-filter: blur(22px);
+    background: rgba(231, 231, 231, 0.9);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 /* Dark Gradient */
 .modal .close-button, .nav a, .contact-form input[type="submit"], .welcometext, .pagewelcome, .featuredarticle, .articlecolumn {
@@ -132,9 +118,8 @@ div, aside a, .sitemap a, .linkbutton, footer a, button, .articlecolumn a, .cont
 }
 /* Header */
 .logo {
-    float: left;
     height: 100%;
-    width: 22%;
+    max-width: 22%;
     box-shadow: 0 4px 30px 0 #000000;
 }
 .logo img {
@@ -142,8 +127,6 @@ div, aside a, .sitemap a, .linkbutton, footer a, button, .articlecolumn a, .cont
     border-radius: 0;
 }
 .headertext {
-    float: left;
-    width: 88%;
     margin: auto;
     font-size: 170%;
     text-align: center;
@@ -286,7 +269,7 @@ li.nav {
 }
 /*Light buttons*/
 footer a, .articlecolumn a{
-    border: solid #f0f0f0;
+    border: solid #00a4f0;
 }
 /*Card appearance*/
 .featuredarticle, .articlecolumn{
@@ -611,10 +594,10 @@ th {
         color: #ffffff;
     }
     /*Buttons to grey*/
-    aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form input[type="submit"] {
+    .modal .close-button, aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form input[type="submit"], .nav a {
         color: #ffffff;
         background: linear-gradient(#616161, #272727);
-        border: solid #6e6e6e;
+        border: solid #00a4f0;
     }
     /*Contact dark grey*/
     .contact-form {
@@ -625,6 +608,7 @@ th {
     .linkbutton:hover, button:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .articlecolumn a:hover{
         background: linear-gradient(#333333, #111111);
     }
+    model butt
     th, td {
         border-bottom: 2px solid #ffffff;
     }
@@ -632,7 +616,7 @@ th {
         border: 2px solid #ffffff;
     }
     nav, .modal {
-        background: rgba(17, 17, 17, 0.622);
+        background: rgba(65, 65, 65, 0.90);
     }
     .linkblack {
         color: #ffffff;
