--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,7 +118,7 @@ div, .sitemap a, .linkbutton, button, .articlecolumn a, .contact-form input[type
     z-index: 1;
 }
 header{
-    font-size: 170%;
+    font-size: 160%;
     text-align: center;
     color: #007BFF;
     font-family: 'Anton', sans-serif;
@@ -127,7 +127,7 @@ header{
     src: local('Anton'),url(https://fonts.gstatic.com/s/anton/v25/1Ptgg87LROyAm3Kz-C8.woff2) format('woff2');
     text-shadow: 0px 20px 40px #000000;
     background:linear-gradient(#000000, #0043ae);
-    height: 100px;
+    height: 80px;
     display: flex;
 }
 /* Sets the appearance of title text to match h1 */
@@ -136,7 +136,7 @@ header p {
     font-weight: bold; 
     padding: 0; 
     line-height: 1.2; 
-    margin-top: 0.5em;
+    margin-top: 0.3em;
 }
 /* Navigation Bar */
 nav {
@@ -186,7 +186,7 @@ button:hover {
     cursor: pointer;
 }
 /* Responsive Nav */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 900px) {
     .nav a:not(:first-child) {
         display: none;
     }
@@ -219,6 +219,12 @@ button:hover {
     .columnclose {
         float: right;
         width: 25%;
+    }
+    .asidefooter {
+        padding-left: 29%;
+    }
+    .contact-form {
+        width: 75%;
     }
 }
 @media screen and (max-width: 1200px) {
@@ -369,7 +375,12 @@ aside a:hover {
     box-shadow: 0 4px 10px 0 #007BFF;
 }
 aside h2 {
-    margin: 3%;
+    margin: 2%;
+
+}
+aside hr{
+    border: none;
+    height: 2px;
 }
 .Subheading {
     margin: 3px 3%;
@@ -496,14 +507,6 @@ th {
     padding: 8px 16px;
     display:inline-block;
 }
-@media screen and (min-width: 900px){
-    .asidefooter {
-        padding-left: 29%;
-    }
-.contact-form {
-    width: 75%;
-}
-}
 /* Responsive design Mobile */
 @media screen and (max-width: 600px) {
     /* Less overflow on small screens*/
@@ -520,7 +523,7 @@ th {
         text-align: center;
     }
     header p{
-        margin: 2% auto;
+        margin: 1% auto;
     }
     /* Makes welcome text fill screen*/
     .welcometext{
