--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,10 +121,9 @@ header{
     font-size: 160%;
     text-align: center;
     color: #007BFF;
-    font-family: 'Anton', sans-serif;
+    font-family: 'Anton', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style: normal;
     letter-spacing: 2px;
-    src: local('Anton'),url(https://fonts.gstatic.com/s/anton/v25/1Ptgg87LROyAm3Kz-C8.woff2) format('woff2');
     text-shadow: 0px 20px 40px #000000;
     background:linear-gradient(#000000, #0043ae);
     height: 80px;
